# learning-space

./: .gitignore  LICENSE  README.md  main.py  package-lock.json  pyproject.toml
app/: utils.py
app/core/: config.py
app/models/: users.py
app/routers/: users.py
app/schemas/: users.py
app/services/: users.py
backend/: Dockerfile.yaml  README.md  docker-compose.yml  go.mod  go.sum
backend/cmd/: api_main.go  main.go
backend/config/: config.yaml
backend/internal/app/: run.go
backend/internal/config/: config.go
backend/internal/controller/: user.go
backend/internal/models/: user.go
backend/internal/repository/: user.go
backend/internal/service/: user.go
backend/pkg/database/: postgres.go
frontend/: API_ENDPOINTS_SPECIFICATION.md  package-lock.json  package.json  test-api.js
frontend/app/: page.tsx
frontend/app/create-assignment/: page.tsx
frontend/app/create-course/: page.tsx
frontend/app/lib/: api-config.ts  api.ts  mock-data.ts
frontend/app/login/: page.tsx
frontend/app/messages/: page.tsx
frontend/app/professor-dashboard/: page.tsx
frontend/config/: README.md  env.example
frontend/docs/: api-response-examples.md
generate tasks/: .env  coding_tasks.csv  coding_tasks2.csv  questions_generator.py
generate tasks/coding_questions/: coding_question_01.json  coding_question_02.json  coding_question_03.json  coding_question_04.json  coding_question_05.json
generate tasks/questions/: question_01.json  question_02.json  question_03.json  question_04.json  question_05.json  question_06.json  question_07.json
(+39 files in other folders)
