[project]
name = "learning-space"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "passlib>=1.7.4",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "fastapi>=0.115.13",
    "ruff>=0.12.0",
    "sqlalchemy>=2.0.41",
]
